@@ -1,4 +1,4 @@
-use Test::More tests => 6;
+use Test::More tests => 8;
 use Test::NoWarnings;
 use Test::LongString;
 
@@ -31,6 +31,19 @@ is_string(
 ( $FH, $filename ) = tempfile();
 write_table( [ [ 1, 2 ], [ 3, 4 ] ], $filename, sep => q{,} );
 is_string( slurp($filename), "1,2\n3,4\n", '2D array' );
+close $FH;
+
+( $FH, $filename ) = tempfile();
+write_table( [ [ 1, 2 ], [ 3, 4 ] ], $filename, sep => q{,}, col_names => [
+    'A', 'B' ] );
+is_string( slurp($filename), "A,B\n1,2\n3,4\n", '2D array with array colnames' );
+close $FH;
+
+( $FH, $filename ) = tempfile();
+write_table( [ [ 1, 2 ], [ 3, 4 ] ], $filename, sep => q{,}, col_names => [
+    'A', 'B' ], row_names => [ 'I', 'J'] );
+is_string( slurp($filename), "A,B\nI,1,2\nJ,3,4\n", 
+    '2D array with array colnames and rownames' );
 close $FH;
 
 ( $FH, $filename ) = tempfile();
